@@ -232,6 +232,8 @@ Other Changes
 
 * SOLR-8353: Support regex for skipping license checksums (Gregory Chanan)
 
+* SOLR-8313: SimpleQueryParser doesn't use MultiTermAnalysis for Fuzzy Queries (Tom Hill via Erick Erickson)
+
 ==================  5.4.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
